[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://Assets/default_theme.tres" type="Theme" id=2]

[node name="Card" type="Control" groups=["Card"]]
margin_right = 180.0
margin_bottom = 260.0
rect_min_size = Vector2( 180, 260 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardFront" type="ColorRect" parent="."]
margin_right = 180.0
margin_bottom = 260.0
rect_min_size = Vector2( 120, 180 )
color = Color( 0.113725, 0.105882, 0.121569, 1 )

[node name="ColorRect" type="ColorRect" parent="CardFront"]
margin_left = 5.0
margin_top = 5.0
margin_right = 175.0
margin_bottom = 255.0
color = Color( 0.52549, 0.784314, 0.6, 1 )

[node name="Title" type="Label" parent="CardFront"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 48.0
margin_top = 7.0
margin_right = 119.0
margin_bottom = 36.0
text = "Hi there"

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 180.0
margin_bottom = 290.0

[node name="Properties" type="Node" parent="."]

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
